Fix vertical overflow issue

--- a/css/home.css
+++ b/css/home.css
@@ -3,9 +3,15 @@
 }
 
 body {
+  padding: 0;
+  margin: 0;
+
   background: url("../graphics/bg.jpg");
   background-repeat: repeat-x;
   background-size: contain;
+
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 p {
@@ -18,6 +24,7 @@ p {
 }
 
 @media (max-width: 500px) {
+
   .portrait {
     width: auto;
     height: 66vh;
